RESOLVED FIXED103091
[BlackBerry] InputHandler::ensureFocusTextElementVisible incorrectly used y coordinate as x coordinate
https://bugs.webkit.org/show_bug.cgi?id=103091
Summary [BlackBerry] InputHandler::ensureFocusTextElementVisible incorrectly used y c...
Andrew Lo
Reported 2012-11-22 14:29:16 PST
Typo in InputHandler::ensureFocusTextElementVisible where y coordinate was inadvertently used as x coordinate.
Attachments
Patch (2.33 KB, patch)
2012-11-22 14:36 PST, Andrew Lo
no flags
Andrew Lo
Comment 1 2012-11-22 14:36:39 PST
Yong Li
Comment 2 2012-11-22 14:40:34 PST
Comment on attachment 175711 [details] Patch good cache!
WebKit Review Bot
Comment 3 2012-11-22 23:25:49 PST
Comment on attachment 175711 [details] Patch Rejecting attachment 175711 [details] from commit-queue. New failing tests: inspector-protocol/debugger-terminate-dedicated-worker-while-paused.html Full output: http://queues.webkit.org/results/14960598
WebKit Review Bot
Comment 4 2012-11-23 04:55:35 PST
Comment on attachment 175711 [details] Patch Clearing flags on attachment: 175711 Committed r135594: <http://trac.webkit.org/changeset/135594>
WebKit Review Bot
Comment 5 2012-11-23 04:55:39 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.