[BlackBerry] InputHandler::ensureFocusTextElementVisible incorrectly used y coordinate as x coordinate https://bugs.webkit.org/show_bug.cgi?id=103091

Patch by Andrew Lo <anlo@rim.com> on 2012-11-23
Reviewed by Yong Li.

Internally reviewed by Mike Fenton.
Internal PR249523
Incorrectly used y coordinate as x coordinate in
InputHandler::ensureFocusTextElementVisible.

* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::ensureFocusTextElementVisible):

Canonical link: https://commits.webkit.org/121255@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135594 268f45cc-cd09-0410-ab3c-d52691b4dbfc